<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AppActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rocket_mass"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/rocket_mass"
            android:text="@string/mass"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/rocket_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/mass"
            android:hint="@string/rocket_mass"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/mass_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rocket_mass"
            android:layout_alignTop="@+id/rocket_mass"
            android:layout_toRightOf="@+id/rocket_mass" />

        <TextView
            android:id="@+id/diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rocket_diameter"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/rocket_diameter"
            android:text="@string/diameter"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/rocket_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mass_spinner"
            android:layout_toRightOf="@id/diameter"
            android:hint="@string/rocket_diameter"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/diameter_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rocket_diameter"
            android:layout_below="@+id/mass_spinner"
            android:layout_toRightOf="@+id/rocket_diameter" />

        <TextView
            android:id="@+id/manu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/diameter_spinner"
            android:text="@string/manu"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/bar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/diameter_spinner"
            android:layout_toRightOf="@id/manu"
            android:text="@string/bar"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/diameter_spinner"
            android:layout_toRightOf="@id/bar1"
            android:text="@string/size"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/bar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/diameter_spinner"
            android:layout_toRightOf="@id/size"
            android:text="@string/bar"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/motor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bar2"
            android:layout_alignParentRight="true"
            android:layout_below="@id/diameter_spinner"
            android:layout_toRightOf="@id/bar2"
            android:text="@string/motor"
            android:textSize="10pt" />

        <Spinner
            android:id="@+id/manufacturer_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/manu"
            android:layout_below="@id/motor" />

        <Spinner
            android:id="@+id/size_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/manufacturer_spinner"
            android:layout_alignRight="@+id/size"
            android:layout_below="@id/motor"
            android:layout_toRightOf="@id/manufacturer_spinner" />

        <Spinner
            android:id="@+id/motor_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/size_spinner"
            android:layout_below="@id/motor"
            android:layout_toRightOf="@id/size_spinner" />

        <!--
        <TextView
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ground_altitude"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/manufacturer_spinner"
            android:text="@string/altitude"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/ground_altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/manufacturer_spinner"
            android:layout_toRightOf="@id/altitude"
            android:hint="@string/ground_altitude"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/altitude_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ground_altitude"
            android:layout_below="@id/manufacturer_spinner"
            android:layout_toRightOf="@id/ground_altitude" />
        -->

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/motor_spinner"
            android:onClick="estimateValues"
            android:text="@string/button_estimate" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_button"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textSize="12pt" />

        <Button
            android:id="@+id/create_engine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true"
            android:onClick="createEngine"
            android:text="@string/creat_engine" />
    </RelativeLayout>

</ScrollView>